new data to jun17

--- a/notebooks/data_scrubber.ipynb
+++ b/notebooks/data_scrubber.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +107,9 @@
      "text": [
       "b'Skipping line 7137: expected 3 fields, saw 5\\n'\n",
       "b'Skipping line 26463: expected 3 fields, saw 5\\n'\n",
-      "b'Skipping line 20053: expected 3 fields, saw 5\\nSkipping line 23465: expected 3 fields, saw 5\\n'\n"
+      "b'Skipping line 20053: expected 3 fields, saw 5\\nSkipping line 23465: expected 3 fields, saw 5\\n'\n",
+      "b'Skipping line 2213: expected 3 fields, saw 5\\n'\n",
+      "b'Skipping line 5542: expected 3 fields, saw 5\\n'\n"
      ]
     }
    ],
@@ -123,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +227,7 @@
        "63792               62.2                  5.6 2019-01-15 22:15:00         2"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -246,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -292,7 +294,7 @@
        "['sensor_data.csv']"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -303,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -382,7 +384,7 @@
        "34               37.6                  7.6 2019-11-09 15:34:00         1"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -393,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -425,38 +427,38 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>319585</th>\n",
-       "      <td>60.5</td>\n",
-       "      <td>20.9</td>\n",
-       "      <td>2020-06-01 22:15:00</td>\n",
+       "      <th>360802</th>\n",
+       "      <td>68.0</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>2020-06-18 16:36:00</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>319586</th>\n",
-       "      <td>60.5</td>\n",
-       "      <td>20.9</td>\n",
-       "      <td>2020-06-01 22:16:00</td>\n",
+       "      <th>360803</th>\n",
+       "      <td>68.2</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>2020-06-18 16:37:00</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>319587</th>\n",
-       "      <td>60.6</td>\n",
-       "      <td>20.9</td>\n",
-       "      <td>2020-06-01 22:17:00</td>\n",
+       "      <th>360804</th>\n",
+       "      <td>68.1</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>2020-06-18 16:38:00</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>319588</th>\n",
-       "      <td>60.6</td>\n",
-       "      <td>20.9</td>\n",
-       "      <td>2020-06-01 22:18:00</td>\n",
+       "      <th>360805</th>\n",
+       "      <td>68.1</td>\n",
+       "      <td>24.1</td>\n",
+       "      <td>2020-06-18 16:39:00</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>319589</th>\n",
-       "      <td>60.6</td>\n",
-       "      <td>20.8</td>\n",
-       "      <td>2020-06-01 22:19:00</td>\n",
+       "      <th>360806</th>\n",
+       "      <td>67.5</td>\n",
+       "      <td>24.1</td>\n",
+       "      <td>2020-06-18 16:40:00</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -465,14 +467,14 @@
       ],
       "text/plain": [
        "        relative_humidity  temperature_celsius           timestamp  location\n",
-       "319585               60.5                 20.9 2020-06-01 22:15:00         2\n",
-       "319586               60.5                 20.9 2020-06-01 22:16:00         2\n",
-       "319587               60.6                 20.9 2020-06-01 22:17:00         2\n",
-       "319588               60.6                 20.9 2020-06-01 22:18:00         2\n",
-       "319589               60.6                 20.8 2020-06-01 22:19:00         2"
+       "360802               68.0                 24.0 2020-06-18 16:36:00         2\n",
+       "360803               68.2                 24.0 2020-06-18 16:37:00         2\n",
+       "360804               68.1                 24.0 2020-06-18 16:38:00         2\n",
+       "360805               68.1                 24.1 2020-06-18 16:39:00         2\n",
+       "360806               67.5                 24.1 2020-06-18 16:40:00         2"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
